more padding fixes on mobile

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -111,8 +111,8 @@
         padding: 0 4px;
     }
 
-    .project-header:last-child {
-        margin-top: 5px;
+    .projects-flex-container > div:nth-child(1) > h2:nth-child(1) {
+        margin-top: 0;
     }
 
 }
